lab.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab_1
---
apiVersion: v1
kind: Namespace
metadata:
  name: lab_2
---
apiVersion: v1
kind: Pod
metadata:
  name: lab
  namespace: lab_1
spec:
  containers:
    - name: lab
      image: busybox:1.34.1
      command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Pod
metadata:
  name: lab
  namespace: lab_2
spec:
  containers:
    - name: lab
      image: busybox:1.34.1
      command: ["sleep", "infinity"]
