lab_net_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: lab1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
  name: allow-own
  namespace: lab1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              project: lab
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: lab
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: lab2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-own
  namespace: lab2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              project: lab
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              project: lab
